--- a/app/views/jobs/_all.html.erb
+++ b/app/views/jobs/_all.html.erb
@@ -1,7 +1,7 @@
 <table class="table">
   <table class="table table-striped">
     <tr>
-      <th>
+      <th colspan="5">
         <%= link_to "Add New Job", new_job_path %>
       </th>
     </tr>
