--- a/app/views/customs/_replace_dropdown.html.erb
+++ b/app/views/customs/_replace_dropdown.html.erb
@@ -1,8 +1,8 @@
-<% @value = DropdownValue.find_by_custom_id(custom.id) %>
+<% @value = DropdownValue.find_by_custom_id_and_company_id(custom.id, current_login.id) %>
 <% if custom.field == "Text Box" %>
   <%= text_field_tag "textField",{}, :value => @value ? @value.drop_value : "", :onfocus => "javascript:show_edit_form('#{custom.id}','#{@value.id}')" %>
 <% elsif custom.field == "Dropdown List" %>
-    <% dropvalue = DropdownValue.find_by_custom_id(custom.id).drop_value.split(',').each %>
+    <% dropvalue = DropdownValue.find_by_custom_id_and_company_id(custom.id, current_login.id).drop_value.split(',').each %>
   <%= select_tag "dropdownField", options_for_select(dropvalue.each do |drop|[drop] end), :style => "width: 436px" %>
   <%= link_to_function "Edit Values", "update_dropdown_values('#{custom.id}')", :class => "btn btn-mini btn-primary", :style => "color:white" %>
 <% elsif custom.field == "Calendar" %>
@@ -18,6 +18,19 @@
 </span>
 
 <script>
+  $(document).ready(function() {
+    /* Activating Best In Place */
+    $('.datepicker').datepicker()
+    .on('changeDate', function(e){
+        var y = e.date.getFullYear(),
+        _m = e.date.getMonth() + 1,
+        m = (_m > 9 ? _m : '0'+_m),
+        _d = e.date.getDate(),
+        d = (_d > 9 ? _d : '0'+_d);
+        $(this).prev('input.data').val(y + '-' + m + '-' + d);
+    });
+  });
+  
   function update_dropdown_values(id){
     $.ajax({
       url:"/customs/edit_dropdown",
