--- a/app/views/customs/new.html.erb
+++ b/app/views/customs/new.html.erb
@@ -1,12 +1,7 @@
 <%= render '/layouts/tabs_for_settings' %>
 
-<%# Tabs available for both customer and jobs%>
-<ul class="nav nav-tabs" id="custom_tab">
-  <% @tabs.each do |tab| %>
-    <li class=<%= (params[:tab].to_i == tab.id) ? 'active' : '' %> >
-      <%= link_to (tab.name+" - #{tab.tab_type} "), new_custom_path(:tab => tab.id, :type => tab.tab_type) %>
-    </li>
-  <% end %>
-</ul>
+<div id="allTabs">
+  <%= render :partial => 'all_tabs' %>
+</div>
 
 <%= render 'form' %>
