--- a/app/views/contacts/_contacts.html.erb
+++ b/app/views/contacts/_contacts.html.erb
@@ -1,5 +1,3 @@
-<%= render 'search_data' %>
-
 <table class="table">
   <table class="table table-striped">
     <tr>
@@ -17,7 +15,7 @@
       <th colspan="3">Actions</th>
     </tr>
 
-    <% contacts.each do |contact| %>
+    <% @contacts.each do |contact| %>
       <tr id="contact_<%= contact.id %>">
         <td><%= link_to  contact.name, edit_contact_path(contact) %></td>
         <td><%= contact.role %></td>
