--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,5 +1,10 @@
 <%= render '/layouts/customer_with_action' %>
 <%= render '/layouts/tab_panel_for_customer' %>
 
-<%= render :partial => "contacts", :locals => {:contacts => @contacts} %>
+<%= form_tag :contacts, :method => 'get', :id => "contacts_search" do %>
+<%= text_field_tag :search, params[:search], :placeholder => 'search by reference number',:class => "input-large search-query" %>
 
+ <div id="search_data">
+      <%= render :partial => 'contacts' %>
+ </div>
+<% end %>
