--- a/app/views/contacts/index.js.erb
+++ b/app/views/contacts/index.js.erb
@@ -1,1 +1,1 @@
-$("#search_data").html("<%= escape_javascript("contacts") %>");
+$("#search_data").html('<%= escape_javascript render :partial => 'contacts'%>');
