--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,6 +3,7 @@
 
 <%= form_tag :contacts, :method => 'get', :id => "contacts_search" do %>
 <%= text_field_tag :search, params[:search], :placeholder => 'search by reference number',:class => "input-large search-query" %>
+<%= submit_tag :Search, :class => "btn btn-mini btn-primary",:style => "width:60px; height:30px" %> 
 
  <div id="search_data">
       <%= render :partial => 'contacts' %>
