--- a/app/views/customs/_form.html.erb
+++ b/app/views/customs/_form.html.erb
@@ -66,7 +66,7 @@
         <%= f.label "Enter value for custom field" %>
         <%= text_field_tag "drop_down_value", nil, :placeholder => "Dropdown Values e.g: value 1, value 2, value 3, ......", :class => 'data' %>
         <%= image_tag "calendar.png", :style => "width: 32px; height: 32px; cursor:pointer; display:none;", :id => "calendar_icon1", :class => "datepicker" %>
-        <span class="value_label" style="color:red; display: none;">NOTE: Use commas(,) to seperate multiple values</span>
+        <span class="value_label" style="color:blue; display: none;">NOTE: Use commas(,) to seperate multiple values</span>
       </td>
       <td><%#= link_to_function "Add More Values", "add_drop_value();", :class => "btn btn-small", :style => "padding-top: 8px; padding-bottom: 8px;" %></td>
     </tr>
