--- a/app/views/customs/_replace_dropdown.html.erb
+++ b/app/views/customs/_replace_dropdown.html.erb
@@ -2,17 +2,19 @@
 <% if custom.field == "Text Box" %>
   <%= text_field_tag "textField",{}, :value => @value ? @value.drop_value : "", :onfocus => "javascript:show_edit_form('#{custom.id}','#{@value.id}')" %>
 <% elsif custom.field == "Dropdown List" %>
-    <% dropvalue = DropdownValue.find_by_custom_id_and_company_id(custom.id, current_login.id).drop_value.split(',').each %>
+  <% dropvalue = DropdownValue.find_by_custom_id_and_company_id(custom.id, current_login.id).drop_value.split(',').each %>
   <%= select_tag "dropdownField", options_for_select(dropvalue.each do |drop|[drop] end), :style => "width: 436px" %>
   <%= link_to_function "Edit Values", "update_dropdown_values('#{custom.id}')", :class => "btn btn-mini btn-primary", :style => "color:white" %>
 <% elsif custom.field == "Calendar" %>
   <%= text_field_tag "calendar", nil, :value => @value ? @value.drop_value : "",:onfocus => "javascript:show_edit_form('#{custom.id}','#{@value.id}')", :class => 'data' %>&nbsp;
   <%= image_tag "calendar.png", :style => "width: 32px; height: 32px; cursor:pointer;", :id => "calendar_icon", :class => "datepicker"%>
+<% elsif custom.field == "Legend" %>
+  <pre><%= @value.drop_value %></pre>
 <% else %>
   ''
 <% end %>
 
-<span style="float: right; margin-top: 14px;">
+<span>
   <%= link_to "Delete", custom, :remote => true, :confirm => "Are you sure to delete?", :method => :delete, :class => "btn btn-mini btn-primary" , :style => "color:white;"%>&nbsp;
   <%= link_to_function "Hide", "status_false('#{custom.id}');", :class => "btn btn-mini btn-primary" , :style => "color:white;"%>
 </span>
@@ -22,12 +24,12 @@
     /* Activating Best In Place */
     $('.datepicker').datepicker()
     .on('changeDate', function(e){
-        var y = e.date.getFullYear(),
-        _m = e.date.getMonth() + 1,
-        m = (_m > 9 ? _m : '0'+_m),
-        _d = e.date.getDate(),
-        d = (_d > 9 ? _d : '0'+_d);
-        $(this).prev('input.data').val(y + '-' + m + '-' + d);
+      var y = e.date.getFullYear(),
+      _m = e.date.getMonth() + 1,
+      m = (_m > 9 ? _m : '0'+_m),
+      _d = e.date.getDate(),
+      d = (_d > 9 ? _d : '0'+_d);
+      $(this).prev('input.data').val(y + '-' + m + '-' + d);
     });
   });
   
