quickeebook changes in customer_controller

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -72,7 +72,7 @@
   
 
   <div class="field">
-    <%= f.label :website%>
+    <label>Website <span style='color:green'> &nbsp; &nbsp; must start with (http:// OR https://)</span></label>
     <%= f.text_field :website %>
   </div>
 
