--- a/app/views/customs/_dropdown_fields.html.erb
+++ b/app/views/customs/_dropdown_fields.html.erb
@@ -1,3 +1,4 @@
+<% @value = current_login.dropdown_values.find_by_custom_id(params[:custom_id]) %>
 <%= form_for @drop_downvalue,:url => update_dropdown_values_custom_path(@drop_downvalue),:method => 'PUT',:remote => true do |f| %>
   <%= f.hidden_field :custom_id,:value => @custom.id %>
   <% if custom.field == "Text Box" %>
@@ -8,6 +9,10 @@
   <% elsif custom.field == "Calendar" %>
     <%= f.text_field "drop_value", :value => @value ? @value.drop_value : "", :class => 'data', :placeholder => Date.today %>&nbsp;
     <%= image_tag "calendar.png", :style => "width: 32px; height: 32px; cursor:pointer;", :id => "calendar_icon", :class => "datepicker"%>
+  <% elsif custom.field == "Legend" %>
+    <%= f.text_area "drop_value", :value => @value ? @value.drop_value : "default value", :rows => 5 %>
+  <% elsif custom.field == "Table" %>
+    <%= f.text_field "drop_value", :value => @value ? @value.drop_value : "default value" %>
   <% else %>
     ''
   <% end %>
@@ -16,19 +21,19 @@
 <% end %>
 
 <script>
-  function cancel_update_dropdown(id){
+  function cancel_update_dropdown(id) {
     $("#custom_field_updation_<%= @custom.id %>").html('<%= escape_javascript render :partial => 'customs/replace_dropdown',:locals => {:custom => custom} %>');
   }
 
   $(document).ready(function() {
     /* Activating Best In Place */
     $('.datepicker').datepicker()
-    .on('changeDate', function(e){
+            .on('changeDate', function(e) {
       var y = e.date.getFullYear(),
-      _m = e.date.getMonth() + 1,
-      m = (_m > 9 ? _m : '0'+_m),
-      _d = e.date.getDate(),
-      d = (_d > 9 ? _d : '0'+_d);
+              _m = e.date.getMonth() + 1,
+              m = (_m > 9 ? _m : '0' + _m),
+              _d = e.date.getDate(),
+              d = (_d > 9 ? _d : '0' + _d);
       $(this).prev('input.data').val(y + '-' + m + '-' + d);
     });
   });
