--- a/app/views/customs/update_table.js.erb
+++ b/app/views/customs/update_table.js.erb
@@ -1,1 +1,1 @@
-$("#custom_field_updation_<%= params[:id] %>").html('<%= escape_javascript render :partial => '/customs/replace_dropdown', :locals => {:custom => @custom} %>');
+$("#create_table_fields").html('<%= escape_javascript render :partial => 'create_table_fields',:locals => {:custom => @custom} %>');
