--- a/app/views/customs/index.html.erb
+++ b/app/views/customs/index.html.erb
@@ -40,15 +40,15 @@
       <div id="custom_field_updation_<%= custom.id %>">
         <% @value = DropdownValue.find_by_custom_id_and_company_id(custom.id, current_login.id) %>
         <% if custom.field == "Text Box" %>
-          <%= text_field_tag "textField", @value.drop_value %>
+          <%= text_field_tag "textField", @value.drop_value ,:readonly => true%>
         <% elsif custom.field == "Dropdown List" %>
           <% dropvalue = DropdownValue.find_by_custom_id_and_company_id(custom.id, current_login.id).drop_value.split(',').each %>
           <%= select_tag "dropdownField", options_for_select(dropvalue.each do |drop|[drop] end), :style => "width: 436px" %>
         <% elsif custom.field == "Calendar" %>
-          <%= text_field_tag "calendar", nil, :value => @value ? @value.drop_value : "", :class => 'data' %>&nbsp;
+          <%= text_field_tag "calendar", nil, :value => @value ? @value.drop_value : "", :class => 'data',:readonly => true %>&nbsp;
           <%= image_tag "calendar.png", :style => "width: 32px; height: 32px; cursor:pointer;", :id => "calendar_icon", :class => "datepicker"%>
         <% elsif custom.field == "Legend" %>
-          <%= text_area_tag "drop_value", @value.drop_value, :rows => 5 %>
+          <%= text_area_tag "drop_value", @value.drop_value, :rows => 5 ,:readonly => true%>
         <% elsif custom.field == "Table" %>
           <% values = current_login.dropdown_values.where("custom_id=?",custom.id).order("created_at") %>
           <table class ="table-striped">
