small changes in customer

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,7 +4,7 @@
 
 
 <%= form_tag :customers, :method => 'get', :id => "customers_search"  do  %>
-    <%= text_field_tag :search, params[:search], :placeholder => 'search by reference number',:class => "input-large search-query" %>
+    <%= text_field_tag :search, params[:search], :placeholder => 'search',:class => "input-large search-query" %>
     <%= submit_tag :Search, :class => "btn btn-mini btn-primary", :style => "width:60px; height:30px" %> 
     <div id="customer123">
       <%= render :partial => 'customer' %>
