--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -11,21 +11,23 @@
     </div>
   <% end %>
 
-
+  <% if @customer_old_name %>
+    <%= hidden_field_tag "customer_name", nil, :value => @customer_old_name %>
+  <% end %>
 
   <div class="field">
     <%= f.label :types, "Type" %>
     <%= f.select :types, options_for_select([["Prospect"],["Customer"],["Job site"]],:selected => @customer.types)%>
 
   </div>
-   
+
 
   <div class="field">
     <%= f.label :company_name,"Company" %>
     <%= f.text_field :company_name %>
   </div>
 
-   <div class="field">
+  <div class="field">
     <%= f.label :address1,"Address1" %>
     <%= f.text_field :address1 %>
   </div>
@@ -40,14 +42,14 @@
     <%=f.text_field :city, :style => "width:220px" %>
 
     <%= f.text_field :state, :style => "width:80px" %>
-    
+
     <%= f.text_field :zip, :style => "width:80px" %>
   </div>
 
   <div class="field">
     <%= label_tag :contact %>
     <% if current_login.contacts.empty? %>
-    <span style="color: red;">NO CONTACTS</span>
+      <span style="color: red;">NO CONTACTS</span>
     <% else %>
 
       <%= f.select :contact_id, options_for_select(current_login.contacts.map{|contact| [contact.name, contact.id]},:selected => @customer.contact_id),{}, :onchange => "GetContact(this)" %>
@@ -69,7 +71,7 @@
     <%= f.text_field :phone3, :size => 4, :maxlength => 4,:value =>@phone3.blank? ? @customer.phone3 : @phone3, :style => "height: 25px;  margin-left: 2px;   width: 50px;  margin-top: 0px;   padding: 3px 10px;", :onkeyup => "phone_validate(this,3)" %>
     <%= f.text_field :phone4, :size => 4, :maxlength => 4,:value =>@phone4.blank? ? @customer.phone4 : @phone4, :style => "height: 25px;    padding: 3px 10px; width: 50px;  margin-left: 2px;margin-top: 0px;", :onkeyup => "phone_validate(this,4)", :placeholder => "Ext.." %>
   </div>
-  
+
 
   <div class="field">
     <label>Website <span style='color:green'> &nbsp; &nbsp; must start with (http:// OR https://)</span></label>
