--- a/app/views/settings/sync_customer_data.js.erb
+++ b/app/views/settings/sync_customer_data.js.erb
@@ -1,4 +1,4 @@
-$(".notice").html("All the customers are successfully sync to H5SW Application. Please Confirm it!");
-$("#sync_customer").html("Sync customer now")
-$(".notice").fadeOut();
-$(".notice").fadeIn();
+$("#notice-customer").html("All the customers are successfully sync to H5SW Application. Please Confirm it!");
+$("#sync_customer").html("Sync Customer Now")
+$("#notice-customer").fadeOut();
+$("#notice-customer").fadeIn();
