--- a/app/views/settings/accounting.html.erb
+++ b/app/views/settings/accounting.html.erb
@@ -23,8 +23,12 @@
 <% else %>
 <%= button_to "Disconnect from Quickbooks", {:controller => "settings", :action => "dis_quickbooks"} , :class => "btn btn-small btn-primary"%>
 
-<%= link_to_function "Sync customer now", "sync_customer_data();", :class => "btn btn-small btn-primary", :style => "width:156px", :id => "sync_customer" %>
-<span class="notice">Import all new customers created on quickbooks.</span>
+<%= link_to_function "Sync Customer Now", "sync_customer_data();", :class => "btn btn-small btn-primary", :style => "width:156px", :id => "sync_customer" %>
+<span id="notice-customer" class="notice">Import all new customers created on quickbooks.</span>
+<br />
+
+<%= link_to_function "Sync Items Now", "sync_items", :id => "sync_items" %>
+<span id="notice-item" class="notice">Import all new customers created on quickbooks.</span>
 <% end %>
 
 <script>
@@ -36,5 +40,10 @@
         dataType: 'script',
         success: function(data){}
     });
+  }
+
+  function sync_items(){
+  document.getElementById("sync-item").innerHTML = "Synchronizing...."
+  $.ajax({})
   }
 </script>
