--- a/app/views/settings/accounting.html.erb
+++ b/app/views/settings/accounting.html.erb
@@ -27,8 +27,8 @@
 <span id="notice-customer" class="notice">Import all new customers created on quickbooks.</span>
 <br />
 
-<%= link_to_function "Sync Items Now", "sync_items", :id => "sync_items" %>
-<span id="notice-item" class="notice">Import all new customers created on quickbooks.</span>
+<%#= link_to_function "Sync Items Now", "sync_items", :id => "sync_items" %>
+<%#*<span id="notice-item" class="notice">Import all new customers created on quickbooks.</span>%>
 <% end %>
 
 <script>
